Hide scrollbar on move log to prevent layout shift

--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -13,3 +13,10 @@
 .font-tile {
   font-family: helvetica, arial, sans-serif;
 }
+
+.scrollbar-none {
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
